Save and restore main window position and size (#2)